restructuring to use record. 30/10/2024