@@ -2,7 +2,7 @@ package com.example.hashinfarm.data.DAOs;
 
 import com.example.hashinfarm.app.DatabaseConnection;
 import com.example.hashinfarm.utils.logging.AppLogger;
-import com.example.hashinfarm.data.DTOs.Offspring;
+import com.example.hashinfarm.data.DTOs.records.UnifiedOffspring;
 import java.sql.*;
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -11,14 +11,17 @@ import java.util.List;
 public class OffspringDAO {
     private static final DatabaseConnection dbConnection = DatabaseConnection.getInstance();
 
-    public static Offspring getOffspringByCattleId(int CattleId) throws SQLException {
-        String query = "SELECT * FROM offspring WHERE CattleID = ?";
-        List<Offspring> offspringList = getOffspringByQuery(query, CattleId);
-        return offspringList.isEmpty() ? null : offspringList.getFirst();
+    public static UnifiedOffspring getTheOffspringDetailsByItsCattleId(int cattleId) throws SQLException {
+        String query = "SELECT o.OffspringID, o.BirthWeight, o.EaseOfCalving, o.GestationLength, " +
+                "o.MeasuredWeight, o.LastDateWeightTaken, o.IntendedUse, " +
+                "o.CattleID, o.BreedingMethod, c.DateOfBirth, c.SireID, c.Name AS CattleName, c.Gender " +
+                "FROM offspring o JOIN cattle c ON o.CattleID = c.CattleID WHERE o.CattleID = ?";
+        List<UnifiedOffspring> offspringList = getOffspringByQuery(query, cattleId);
+        return offspringList.isEmpty() ? null : offspringList.get(0);
     }
 
-    private static List<Offspring> getOffspringByQuery(String query, Object parameter) throws SQLException {
-        List<Offspring> offspringList = new ArrayList<>();
+    private static List<UnifiedOffspring> getOffspringByQuery(String query, Object parameter) throws SQLException {
+        List<UnifiedOffspring> offspringList = new ArrayList<>();
         try (Connection connection = dbConnection.getConnection();
              PreparedStatement preparedStatement = connection.prepareStatement(query)) {
             if (parameter != null) {
@@ -26,30 +29,28 @@ public class OffspringDAO {
             }
             try (ResultSet resultSet = preparedStatement.executeQuery()) {
                 while (resultSet.next()) {
-                    offspringList.add(mapResultSetToOffspring(resultSet));
+                    offspringList.add(mapResultSetToUnifiedOffspring(resultSet));
                 }
             }
         }
         return offspringList;
     }
 
-
-
-    public static void updateOffspring(Offspring offspring) throws SQLException {
+    public static void updateOffspring(UnifiedOffspring offspring) throws SQLException {
         String query = "UPDATE offspring SET BirthWeight = ?, EaseOfCalving = ?, GestationLength = ?, " +
-                "MeasuredWeight = ?, LastDateWeightTaken = ?, IntendedUse = ?, CattleID = ?, BreedingMethod = ? WHERE OffspringID = ?";
+                "MeasuredWeight = ?, LastDateWeightTaken = ?, IntendedUse = ?, CattleID = ?, BreedingMethod = ? " +
+                "WHERE OffspringID = ?";
         try (Connection connection = dbConnection.getConnection();
              PreparedStatement preparedStatement = connection.prepareStatement(query)) {
             setOffspringPreparedStatementValues(preparedStatement, offspring);
-            preparedStatement.setInt(9, offspring.getOffspringId());
+            preparedStatement.setInt(9, offspring.offspringId());
             int rowsAffected = preparedStatement.executeUpdate();
             if (rowsAffected == 0) {
-                throw new SQLException("Failed to update offspring with ID: " + offspring.getOffspringId());
+                throw new SQLException("Failed to update offspring with ID: " + offspring.offspringId());
             }
         } catch (SQLException e) {
-            AppLogger.error("Error updating offspring: " + offspring.getOffspringId(), e);
-            e.printStackTrace();
-            throw e; // Re-throw the exception for higher-level handling
+            AppLogger.error("Error updating offspring: " + offspring.offspringId(), e);
+            throw e;
         }
     }
 
@@ -62,59 +63,64 @@ public class OffspringDAO {
         }
     }
 
-    private static void setOffspringPreparedStatementValues(PreparedStatement preparedStatement, Offspring offspring) throws SQLException {
-        preparedStatement.setDouble(1, offspring.getBirthWeight());
-        preparedStatement.setInt(2, offspring.getEaseOfCalving());
-        preparedStatement.setInt(3, offspring.getGestationLength());
-        preparedStatement.setDouble(4, offspring.getMeasuredWeight());
+    private static void setOffspringPreparedStatementValues(PreparedStatement preparedStatement, UnifiedOffspring offspring) throws SQLException {
+        preparedStatement.setDouble(1, offspring.birthWeight());
+        preparedStatement.setInt(2, offspring.easeOfCalving());
+        preparedStatement.setInt(3, offspring.gestationLength());
+        preparedStatement.setDouble(4, offspring.measuredWeight());
 
-        // Handle potential null value for date
-        LocalDate lastDateWeightTaken = offspring.getLastDateWeightTaken();
+        LocalDate lastDateWeightTaken = offspring.lastDateWeightTaken();
         if (lastDateWeightTaken != null) {
             preparedStatement.setDate(5, java.sql.Date.valueOf(lastDateWeightTaken));
         } else {
             preparedStatement.setNull(5, java.sql.Types.DATE);
         }
 
-        preparedStatement.setString(6, offspring.getIntendedUse());
-        preparedStatement.setString(7, offspring.getCattleId());
-        preparedStatement.setString(8, offspring.getBreedingMethod());
+        preparedStatement.setString(6, offspring.intendedUse());
+        preparedStatement.setString(7, offspring.cattleId());
+        preparedStatement.setString(8, offspring.breedingMethod());
     }
 
-
-    private static Offspring mapResultSetToOffspring(ResultSet resultSet) throws SQLException {
+    private static UnifiedOffspring mapResultSetToUnifiedOffspring(ResultSet resultSet) throws SQLException {
         int offspringId = resultSet.getInt("OffspringID");
-        double birthWeight = resultSet.getDouble("BirthWeight");
-        int easeOfCalving = resultSet.getInt("EaseOfCalving");
-        int gestationLength = resultSet.getInt("GestationLength");
-        double measuredWeight = resultSet.getDouble("MeasuredWeight");
-        LocalDate lastDateWeightTaken = resultSet.getDate("LastDateWeightTaken") != null ? resultSet.getDate("LastDateWeightTaken").toLocalDate() : null;
-        String intendedUse = resultSet.getString("IntendedUse");
         String cattleId = resultSet.getString("CattleID");
+        String dateOfBirth = resultSet.getString("DateOfBirth");
+        String cattleName = resultSet.getString("CattleName");
+        String gender = resultSet.getString("Gender");
         String breedingMethod = resultSet.getString("BreedingMethod");
 
-        return new Offspring(offspringId, birthWeight, easeOfCalving, gestationLength, measuredWeight,
-                lastDateWeightTaken, intendedUse, cattleId, breedingMethod);
+        // Handle null values for numerical fields and provide default values if necessary
+        Double birthWeight = resultSet.getObject("BirthWeight") != null ? resultSet.getDouble("BirthWeight") : 0.0;
+        Integer easeOfCalving = resultSet.getObject("EaseOfCalving") != null ? resultSet.getInt("EaseOfCalving") : 0;
+        Integer gestationLength = resultSet.getObject("GestationLength") != null ? resultSet.getInt("GestationLength") : 283; // Default to 283 days
+        Double measuredWeight = resultSet.getObject("MeasuredWeight") != null ? resultSet.getDouble("MeasuredWeight") : 0.0;
+
+        LocalDate lastDateWeightTaken = resultSet.getDate("LastDateWeightTaken") != null ?
+                resultSet.getDate("LastDateWeightTaken").toLocalDate() : null;
+
+        String intendedUse = resultSet.getString("IntendedUse") != null ? resultSet.getString("IntendedUse") : "";
+        String sireId = resultSet.getString("SireID") != null ? resultSet.getString("SireID") : "";
+
+        return new UnifiedOffspring(offspringId, cattleId, cattleName, gender, breedingMethod, birthWeight, easeOfCalving,
+                gestationLength, measuredWeight, lastDateWeightTaken, dateOfBirth, intendedUse, sireId);
     }
 
 
-
-    public static boolean hasOffspring(int cattleId) throws SQLException {
+    public static boolean isOffspringOfSelectedCattle(int cattleId) throws SQLException {
         String query = "SELECT COUNT(*) FROM offspring WHERE CattleID = ?";
         try (Connection connection = dbConnection.getConnection();
              PreparedStatement preparedStatement = connection.prepareStatement(query)) {
             preparedStatement.setInt(1, cattleId);
             try (ResultSet resultSet = preparedStatement.executeQuery()) {
                 if (resultSet.next()) {
-                    return resultSet.getInt(1) > 0; // Check if there are any offspring records
+                    return resultSet.getInt(1) > 0;
                 }
             }
         }
-        return false; // No offspring found by default
+        return false;
     }
 
-
-    public static void insertOffspring(Offspring offspring) throws SQLException {
+    public static void insertOffspring(UnifiedOffspring offspring) throws SQLException {
         String query = "INSERT INTO offspring (BirthWeight, EaseOfCalving, GestationLength, MeasuredWeight, " +
                 "LastDateWeightTaken, IntendedUse, CattleID, BreedingMethod) VALUES (?, ?, ?, ?, ?, ?, ?, ?)";
         try (Connection connection = dbConnection.getConnection();
@@ -122,10 +128,8 @@ public class OffspringDAO {
             setOffspringPreparedStatementValues(preparedStatement, offspring);
             preparedStatement.executeUpdate();
         } catch (SQLException e) {
-            AppLogger.error("Error inserting offspring with CattleID: " + offspring.getCattleId(), e);
-            e.printStackTrace();
-            throw e; // Re-throw the exception for higher-level handling
+            AppLogger.error("Error inserting offspring with CattleID: " + offspring.cattleId(), e);
+            throw e;
         }
     }
-
 }
